--- a/eq_lib/CMakeLists.txt
+++ b/eq_lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(eq_lib)
 
-add_library(eq_lib sqeq.cpp)
+add_library(eq_lib sqeq.cpp utils.h utils.cpp)
 
 target_include_directories(eq_lib PUBLIC .)
 
