Move coeffs parsing to separate file, add basic tests

--- a/eq_tests/CMakeLists.txt
+++ b/eq_tests/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(eq_tests)
 
-add_executable(${PROJECT_NAME} tests.cpp)
+add_executable(${PROJECT_NAME}
+        tests.cpp
+        parse_tests.cpp
+        )
 
 include(FetchContent)
 Set(FETCHCONTENT_QUIET FALSE)
