--- a/eq_tests/CMakeLists.txt
+++ b/eq_tests/CMakeLists.txt
@@ -3,7 +3,8 @@ project(eq_tests)
 add_executable(${PROJECT_NAME}
         tests.cpp
         parse_tests.cpp
-        factory_tests.cpp)
+        factory_tests.cpp
+        queq_tests.cpp)
 
 include(FetchContent)
 Set(FETCHCONTENT_QUIET FALSE)
