--- a/eq_lib/CMakeLists.txt
+++ b/eq_lib/CMakeLists.txt
@@ -14,8 +14,17 @@ add_library(eq_lib
         eq_factory.cpp
         eq_factory.h
         eq.cpp
-        cmd_reader.h cmd_reader.cpp file_reader.h file_reader.cpp printer.cpp printer.h reader.h reader_factory.cpp reader_factory.h)
+        cmd_reader.h
+        cmd_reader.cpp
+        file_reader.h
+        file_reader.cpp
+        printer.cpp
+        printer.h
+        reader.h
+        reader_factory.cpp
+        reader_factory.h)
 
 target_include_directories(eq_lib PUBLIC .)
+target_compile_definitions(eq_lib PUBLIC _USE_MATH_DEFINES)
 
 
